// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyModalContent renders correctly 1`] = `
Array [
  <h1>
    Test
  </h1>,
  <div
    className="key-input-container mt-32"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="label"
      />
      <div
        className="inputform-container"
      >
        <div
          className="input-label"
        />
        <input
          autoFocus={true}
          className="inputform  "
          id="inputKey"
          onChange={[Function]}
          placeholder="Test placeholder"
          value=""
        />
        <div
          className="input-eye none"
        />
      </div>
      <div
        className="error-message"
      />
    </form>
    <div
      className="info-container"
    >
      <div>
        <h3>
          Index
        </h3>
        <form>
          <div
            className="label"
          />
          <div
            className="inputform-container"
          >
            <div
              className="input-label"
            />
            <input
              className="inputform  centered"
              disabled={true}
              value="1"
            />
            <div
              className="input-eye none"
            />
          </div>
          <div
            className="error-message"
          />
        </form>
      </div>
      <div>
        <h3>
          Public Key
        </h3>
        <form>
          <div
            className="label"
          />
          <div
            className="inputform-container"
          >
            <div
              className="input-label"
            />
            <input
              className="inputform  "
              disabled={true}
              value="Waiting for input"
            />
            <div
              className="input-eye none"
            />
          </div>
          <div
            className="error-message"
          />
        </form>
      </div>
    </div>
    <span
      className="submit-button-container"
    >
      <button
        className="button btn-primary  "
        disabled={true}
        id="submit"
        onClick={[Function]}
      >
        <div
          className=""
        >
          Submit
        </div>
      </button>
    </span>
  </div>,
]
`;

exports[`KeyModalContent renders description 1`] = `
Array [
  <h1>
    Test
  </h1>,
  <p>
    Test description
  </p>,
  <div
    className="key-input-container "
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="label"
      />
      <div
        className="inputform-container"
      >
        <div
          className="input-label"
        />
        <input
          autoFocus={true}
          className="inputform  "
          id="inputKey"
          onChange={[Function]}
          placeholder="Test placeholder"
          value=""
        />
        <div
          className="input-eye none"
        />
      </div>
      <div
        className="error-message"
      />
    </form>
    <div
      className="info-container"
    >
      <div>
        <h3>
          Index
        </h3>
        <form>
          <div
            className="label"
          />
          <div
            className="inputform-container"
          >
            <div
              className="input-label"
            />
            <input
              className="inputform  centered"
              disabled={true}
              value="1"
            />
            <div
              className="input-eye none"
            />
          </div>
          <div
            className="error-message"
          />
        </form>
      </div>
      <div>
        <h3>
          Public Key
        </h3>
        <form>
          <div
            className="label"
          />
          <div
            className="inputform-container"
          >
            <div
              className="input-label"
            />
            <input
              className="inputform  "
              disabled={true}
              value="Waiting for input"
            />
            <div
              className="input-eye none"
            />
          </div>
          <div
            className="error-message"
          />
        </form>
      </div>
    </div>
    <span
      className="submit-button-container"
    >
      <button
        className="button btn-primary  "
        disabled={true}
        id="submit"
        onClick={[Function]}
      >
        <div
          className=""
        >
          Submit
        </div>
      </button>
    </span>
  </div>,
]
`;
